Enigma/testing/correct/simple1.inp
* B BETA III II I AAAZ