Enigma/testing/error/trivialerr.inp
* B BETA I I III AAAA (AB)
HELLO WORLD